...
                    <view key="view" contentMode="scaleToFill" id="of9-2P-RrX">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uqh-ct-xRf">
                                <rect key="frame" x="128.5" y="318" width="117" height="30"/>
                                <state key="normal" title="Navigate To Next"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="fjz-gG-yL3"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                    <action selector="fooButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="a9n-hd-gKQ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5Y-Zf-B8X">
                                <rect key="frame" x="150" y="526" width="75" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="gizmos"/>
                                <connections>
                                    <action selector="gizmosButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hQH-tf-uBJ"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zDD-Ix-tZO">
                                <rect key="frame" x="268" y="256" width="11" height="29"/>
...
